fixed app page cut off text in header

--- a/main.css
+++ b/main.css
@@ -134,15 +134,15 @@ p {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-160%, -55%);
+  transform: translate(-180%, -55%);
   color: white;
   font-family: Ink Free;
-  font-weight: bold;
-  font-size: 100px;
+  font-weight: bolder;
+  font-size: 80px;
   text-align: left;
   width: auto;
-  resize: both;
-  overflow: auto;
+  /* resize: both;
+  overflow: auto; */
 }
 
 .prof-header {
